fixed the issue of some styling not being properly applied on the dashboard for IOS devices, added the search component to the sidebar for the dashboard on mobile devices, and added the fade animations to various components in both the dashboard and reports page

--- a/prospects/css/prospects.css
+++ b/prospects/css/prospects.css
@@ -179,7 +179,7 @@
 
 .prospects-table th,
 .prospects-table td {
-    padding: 0.5rem;
+    padding: 1rem;
     text-align: left;
     border-bottom: 1px solid #ddd;
 }
